--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link  href="/1695239427856.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/צילום מסך 2025-04-24 130423.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Chaim Cymerman WebSite</title>
   </head>
   <body>
     <div id="root"></div>
