--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link  href="/1695239427856.svg" /> -->
-    <link rel="icon" type="image/svg+xml" href="/צילום מסך 2025-04-24 130423.png" />
+    <link rel="icon" type="image/svg+xml" href="../public/צילום מסך 2025-04-24 130423.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chaim Cymerman WebSite</title>
   </head>
